--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ ul {
   justify-content: center;
   height: 100%;
   margin: 0 auto;
-  width: clamp(400px, 100%, 1200px);
+  width: clamp(0, 100%, 1200px);
   position: relative;
   z-index: 10;
 }
